torchlite-frontend/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: torchlite-frontend-prod-deployment
spec:
  selector:
    matchLabels:
      app: torchlite-frontend-prod-app
  replicas: 1
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: torchlite-frontend-prod-app
    spec:
      containers:
        - name: torchlite-frontend-prod
          image: ghcr.io/htrc/torchlite-frontend:main-e1450b3
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: dockerconfigjson-github-com
