torchlite-frontend/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: torchlite-frontend-prod-ingress
  annotations:
    #kubernetes.io/ingress.class: public
    #nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: torchlite.htrc.illinois.edu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: torchlite-frontend-prod-service
                port:
                  number: 3000
  tls:
    - hosts:
      - torchlite.htrc.illinois.edu
      secretName: torchlite-frontend-prod-ingress-cert
